@@ -1,86 +1,81 @@
+// FONTS/src/test/testsUnitarios/BolsaTest.java
 package testsUnitarios;
 
 import Dominio.Modelos.Bolsa;
 import Dominio.Modelos.Ficha;
-import static org.junit.Assert.*;
-import static org.mockito.Mockito.*;
-
-import java.util.Collections;
-
 import org.junit.Before;
 import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnitRunner;
 
-/**
- * Test unitario para la clase Bolsa usando únicamente mocks para Ficha.
- * Se prueban los métodos de añadir y sacar fichas, garantizando que la prueba se
- * ejecute de forma independiente del comportamiento real de la clase Ficha.
- */
-@RunWith(MockitoJUnitRunner.class)
+import java.util.Collections;
+import java.util.List;
+
+import static org.junit.Assert.*;
+
 public class BolsaTest {
 
-    private Bolsa bolsa;
+    private Bolsa emptyBolsa;
+    private Bolsa seededBolsa;
 
-    // Este mock se inicializa automáticamente para poder reutilizarlo en los tests.
-    @Mock
-    private Ficha fichaMock;
-
-    /**
-     * Se utiliza una lista vacía para inicializar Bolsa, de modo que el constructor
-     * no cree fichas reales a partir de líneas de archivo. Así, se aisla el test de
-     * cualquier comportamiento no controlado por nosotros.
-     */
     @Before
     public void setUp() {
-        bolsa = new Bolsa(Collections.emptyList());
+        // Bolsa vacía a partir de lista vacía
+        emptyBolsa = new Bolsa(Collections.emptyList());
+        // Bolsa con datos determinísticamente barajada usando semilla
+        List<String> datos = List.of(
+            "A 1 10",   // 1 ficha 'A' de puntuación 10
+            "B 2 5"     // 2 fichas 'B' de puntuación 5
+        );
+        // Con semilla fija, el orden tras shuffle es siempre el mismo
+        seededBolsa = new Bolsa(datos, 42L);
     }
 
-    /**
-     * Verifica que al añadir una ficha (mock) a la bolsa se incremente el tamaño
-     * y que el objeto añadido es exactamente el mock pasado.
-     */
     @Test
-    public void testAñadirFicha() {
-        int initialSize = bolsa.getConjuntoDeFichas().size();
-        bolsa.añadirFicha(fichaMock);
-        assertEquals("El tamaño debe incrementarse en 1 tras añadir una ficha",
-                     initialSize + 1, bolsa.getConjuntoDeFichas().size());
-        assertSame("El objeto añadido debe ser el mismo que el mock inyectado",
-                   fichaMock, bolsa.getConjuntoDeFichas().get(initialSize));
+    public void testEmptyBolsa() {
+        // Vacía → isEmpty == true y sacar devuelve null
+        assertTrue("Debe estar vacía tras crearse con lista vacía", emptyBolsa.isEmpty());
+        assertNull("sacarFicha() en bolsa vacía debe retornar null", emptyBolsa.sacarFicha());
+        assertNull("sacarFichaAleatoria() en bolsa vacía debe retornar null", emptyBolsa.sacarFichaAleatoria());
     }
 
-    /**
-     * Verifica que el método sacarFichaAleatoria retira una ficha de la bolsa cuando
-     * ésta no está vacía. Para ello, se crean mocks adicionales in situ para simular
-     * diferentes fichas.
-     */
     @Test
-    public void testSacarFichaAleatoria_NoEmpty() {
-        // Se crean mocks adicionales de Ficha para el test.
-        Ficha ficha1 = mock(Ficha.class);
-        Ficha ficha2 = mock(Ficha.class);
-        
-        bolsa.añadirFicha(ficha1);
-        bolsa.añadirFicha(ficha2);
-        
-        int sizeBefore = bolsa.getConjuntoDeFichas().size();
-        Ficha removed = bolsa.sacarFichaAleatoria();
-        
-        assertNotNull("Debiera retornar una ficha no nula al sacar de una bolsa no vacía", removed);
-        assertEquals("El tamaño de la bolsa debe disminuir en 1 tras sacar una ficha",
-                     sizeBefore - 1, bolsa.getConjuntoDeFichas().size());
+    public void testSacarFichaSequencialmente() {
+        // Bolsa con 3 fichas: 1 'A' + 2 'B'
+        assertFalse("No debe estar vacía al iniciar", seededBolsa.isEmpty());
+
+        // Sacamos en modo FIFO (índice 0)
+        Ficha f1 = seededBolsa.sacarFicha();  assertNotNull("Primera ficha no debe ser null", f1);
+        Ficha f2 = seededBolsa.sacarFicha();  assertNotNull("Segunda ficha no debe ser null", f2);
+        Ficha f3 = seededBolsa.sacarFicha();  assertNotNull("Tercera ficha no debe ser null", f3);
+
+        // Ahora ya no quedan fichas
+        assertTrue("Tras sacar tres fichas debe estar vacía", seededBolsa.isEmpty());
+        assertNull("Ya no hay fichas", seededBolsa.sacarFicha());
     }
-    
-    /**
-     * Verifica que intentar sacar una ficha de una bolsa vacía retorne null.
-     */
+
     @Test
-    public void testSacarFichaAleatoria_Empty() {
-        // Se crea una nueva instancia de Bolsa con lista vacía para garantizar que no hay fichas.
-        Bolsa emptyBolsa = new Bolsa(Collections.emptyList());
-        Ficha removed = emptyBolsa.sacarFichaAleatoria();
-        assertNull("Sacar una ficha de una bolsa vacía debería retornar null", removed);
+    public void testSacarFichaAleatoria() {
+        // Creamos otra bolsa con la misma semilla para test de aleatoriedad
+        List<String> datos = List.of("A 1 10", "B 2 5");
+        Bolsa b = new Bolsa(datos, 123L);
+
+        // Tamaño inicial esperado: 3 fichas
+        int originalSize = 3;
+        assertFalse("No debe estar vacía al iniciar", b.isEmpty());
+
+        // Sacar una al azar
+        Ficha removed = b.sacarFichaAleatoria();
+        assertNotNull("Debe retornar una ficha al azar", removed);
+
+        // A partir de aquí, calculamos cuántas quedan sacándolas todas
+        int restante = 0;
+        Ficha siguiente;
+        while ((siguiente = b.sacarFicha()) != null) {
+            restante++;
+        }
+        assertEquals(
+            "Tras sacar 1 aleatoria y luego sacar todas las restantes,"
+            + " debe quedar originalSize-1 = 2",
+            originalSize - 1, restante
+        );
     }
 }
